--- a/nyc/templates/activity.html
+++ b/nyc/templates/activity.html
@@ -1,10 +1,3 @@
-<h1>{{ borough|title }}</h1>
 
-<ul>
-    {% for venue in venues %}
-    <li>
-        <a href="{% url 'venue' borough activity venue %}">
-            {{ venue|title }}
-        </a>
-    </li>
-</ul>
+
+<h1>Its working!</h1>
