--- a/nyc/templates/venues.html
+++ b/nyc/templates/venues.html
@@ -1,4 +1,8 @@
+<!--displaying the borough-->
 <h1>{{ borough|title }}</h1>
 
+<!--displaying the venue-->
 <h3>{{ venue|title }}</h3>
+
+<!--displaying the description of the venue-->
 <p>{{ description }}</p>
